--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -1,16 +1,21 @@
-- name: Common configuration for all servers
-  hosts: all
-  become: true
+- name: update web, nfs and db servers
+  hosts: webservers, nfs, db
+  become: yes
   tasks:
-    - name: Update apt cache
+    - name: ensure wireshark is installed
+      yum:
+        name: wireshark
+        state: latest
+
+- name: update LB server
+  hosts: lb
+  become: yes
+  tasks:
+    - name: update apt repo
       apt:
         update_cache: yes
 
-    - name: Install common packages
+    - name: ensure wireshark is installed
       apt:
-        name:
-          - vim
-          - curl
-          - git
-          - unzip
-        state: present
+        name: wireshark
+        state: latest
